--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@types/react": "^18.0.3",
     "@vitejs/plugin-react": "^1.0.7",
     "vite": "^2.9.0"
   }
